# bevy-magic-light-2d

./: CAMERA_VIEWER_README.md  Cargo.toml  MIGRATION_NOTES.md  PROJECTION_CHANGE_HANDLING.md  README.md  TEXTURE_BINDING_FIX.md  WGPU_25_MIGRATION.md  standalone_material_test.rs
.trunk/: trunk.yaml
docs/: zoom-improvements.md
examples/: camera_viewer_demo.rs  krypta.rs  minimal.rs  minimal_with_camera_viewer.rs  movement.rs  test_material.rs  zoom_test.rs
src/: camera_viewer.rs  lib.rs  prelude.rs
src/gi/: camera_viewer.rs  compositing.rs  compositing_new.rs  compositing_simple.rs  constants.rs  mod.rs  pipeline.rs  pipeline_assets.rs  projection_tracker.rs  render_layer.rs  resource.rs  types.rs  types_gpu.rs  util.rs
src/gi/shaders/: gi_camera.wgsl  gi_post_processing.wgsl  gi_ss_blend.wgsl
