[package]
edition = "2021"
name = "bevy_magic_light_2d"
version = "0.11.0"
description = "Experimental dynamic 2D global illumination system for Bevy, based on SDF ray-marching and screen space irradiance cache probes"
homepage = "https://github.com/zaycev/bevy-magic-light-2d"
repository = "https://github.com/zaycev/bevy-magic-light-2d"
authors = ["Vladimir Zaytsev"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
bevy = { version = "0.17.*", default-features = true, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_asset",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_pbr",
    "default_font",
    "embedded_watcher",
    "multi_threaded",
    "bevy_post_process",
    "bevy_text"
]}
bevy-inspector-egui = { version = "0.35.*", optional = true }
bevy_egui = "0.38.*"
log = "0.4.*"
rand = "0.9.*"

[features]
default = ["egui"]
egui = ["dep:bevy-inspector-egui"]

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
debug = true
incremental = true

[profile.dev]
codegen-units = 16
opt-level = 0
debug = true
incremental = true
